# avr32dd20_meson_toolchain_and_pcb

./: README.md  avr-unknown-gcc.txt  avrdude.conf  meson.build
board/gerber/: avr32dd20_adapter-B_Cu.gbl  avr32dd20_adapter-B_Mask.gbs  avr32dd20_adapter-B_Paste.gbp  avr32dd20_adapter-B_Silkscreen.gbo  avr32dd20_adapter-Edge_Cuts.gm1  avr32dd20_adapter-F_Cu.gtl  avr32dd20_adapter-F_Mask.gts  avr32dd20_adapter-F_Paste.gtp  avr32dd20_adapter-F_Silkscreen.gto  avr32dd20_adapter-NPTH-drl_map.gbr  avr32dd20_adapter-NPTH.drl  avr32dd20_adapter-PTH-drl_map.gbr  avr32dd20_adapter-PTH.drl
board/kicad/: avr32.kicad_sym  avr32dd20_adapter.kicad_pcb  avr32dd20_adapter.kicad_prl  avr32dd20_adapter.kicad_pro  avr32dd20_adapter.kicad_sch
part_definition/: README.md
src/: main.c
